eCommerce/k8s/inventory-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-service
  labels:
    app: inventory-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory-service
  template:
    metadata:
      name: inventory-service
      labels:
        app: inventory-service
    spec:
      containers:
        - name: inventory-service
          image: nithinreddyyelluri/ecommerce-inventory-service:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9030
          resources:
            limits:
              memory: "400Mi"
              cpu: "200m"
            requests:
              memory: "200Mi"
              cpu: "100m"
---

apiVersion: v1
kind: Service
metadata:
  name: inventory-service
spec:
  selector:
    app: inventory-service
  ports:
    - port: 9030
      targetPort: 9030
