eCommerce/k8s/kafka.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
spec:
  clusterIP: None

  selector:
    app: kafka

  ports:
    - name: kafka
      port: 9092
      targetPort: 9092

    - name: controller
      port: 9093
      targetPort: 9093

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka

spec:
  serviceName: kafka-service
  replicas: 1

  selector:
    matchLabels:
      app: kafka

  template:
    metadata:
      labels:
        app: kafka

    spec:
      containers:
        - name: kafka
          image: apache/kafka:4.0.0
          resources:
            requests:
              memory: "512Mi"
              cpu: "200m"
            limits:
              memory: "1Gi"
              cpu: "500m"
          ports:
            - containerPort: 9092
              name: kafka

            - containerPort: 9093
              name: controller

          volumeMounts:
            - name: kafka-data
              mountPath: /var/lib/kafka/data

  volumeClaimTemplates:
    - metadata:
        name: kafka-data

      spec:
        accessModes:
          - ReadWriteOnce

        resources:
          requests:
            storage: 2Gi
