eCommerce/k8s/order-db.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: orders-db
spec:
  selector:
    matchLabels:
      app: orders-db
  replicas: 1
  serviceName: orders-db-service
  template:
    metadata:
      name: orders-db
      labels:
        app: orders-db
    spec:
      containers:
        - name: orders-db
          image: postgres:17
          resources:
            limits:
              memory: "200Mi"
              cpu: "200m"
            requests:
              memory: "100Mi"
              cpu: "100m"
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
        storageClassName: "standard-rwo"
        volumeMode: Filesystem

---

apiVersion: v1
kind: Service
metadata:
  name: orders-db-service
spec:
  clusterIP: None
  selector:
    app: orders-db
  ports:
    - port: 5432
      targetPort: 5432
