eCommerce/k8s/order-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  labels:
    app: order-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      name: order-service
      labels:
        app: order-service
    spec:
      containers:
        - name: order-service
          image: nithinreddyyelluri/ecommerce-order-service:latest
          imagePullPolicy: Always
          resources:
            limits:
              memory: "400Mi"
              cpu: "200m"
            requests:
              memory: "200Mi"
              cpu: "100m"
          ports:
            - containerPort: 9040
---

apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  selector:
    app: order-service
  ports:
    - port: 9040
      targetPort: 9040
