eCommerce/k8s/zipkin.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zipkin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zipkin
  template:
    metadata:
      name: zipkin
      labels:
        app: zipkin
    spec:
      containers:
        - name: zipkin
          image: openzipkin/zipkin
          resources:
            limits:
              memory: "400Mi"
              cpu: "100m"
            requests:
              memory: "200Mi"
              cpu: "50m"
          ports:
            - containerPort: 9411

          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 9411
            initialDelaySeconds: 300
            periodSeconds: 20
            timeoutSeconds: 20


---

apiVersion: v1
kind: Service
metadata:
  name: zipkin-service
spec:
  selector:
    app: zipkin
  ports:
    - port: 9411
      targetPort: 9411
